--- a/01-1-Welcome_to_IR.qmd
+++ b/01-1-Welcome_to_IR.qmd
@@ -655,6 +655,10 @@ So, let's not waste this opportunity working together this semester
 
 **Questions on this policy?**
 
+<br>
+
+**SLIDE**: Next class
+
 :::
 
 
