--- a/02-1-Poli_Sci_Theory.qmd
+++ b/02-1-Poli_Sci_Theory.qmd
@@ -403,7 +403,7 @@ When fundamental definitions are incompatible, we end up just talking past each 
 ::::
 
 ::: notes
-All of this is why we started with the case study exercise on Monday.
+All of this is why we started with the case study exercise last class.
 
 <br>
 
