--- a/01-3-International_Political_Events.qmd
+++ b/01-3-International_Political_Events.qmd
@@ -31,7 +31,7 @@ Prep for Class
 
 1. Grade Canvas submissions
 
-2. Bring markers x 5
+2. Bring markers x 4
 
 <br>
 
@@ -93,7 +93,7 @@ Ok, now let's review our citations.
 
 <br>
 
-*Split class into groups of 5*
+*Split class into four groups (maximize board space)*
 
 - Go sit with your groups!
 :::
